--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Quiz</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <script src="assets/js/main.js"></script>
-</body>
+    <title>Code Quiz</title>
+  </head>
+  <body>
+
+<!--NAV HEADER (High Scores and Timer)-->
+    <nav class="navbar navbar-dark bg-dark text-light">
+        <div class="container">
+          <p class="navbar-brand" id="high-scores">View High Scores</p>
+          <p class="navbar-brand">Timer: <span id="timer">60</span></p>
+        </div>
+      </nav>
+
+<!--INTRO-->
+<div class="container w-50 vh-50 text-sm-center border border-dark mt-5 rounded">
+    <div class="mb-5">
+      <h5 class="m-5">CODING QUIZ CHALLENGE</h5>
+      <p class="container">Try to answer the following code-related questions within the time limit. Keep in mins that incorrect answers will penalize your score/time by 10 seconds.</p>
+      <button class="btn btn-primary m-5" id="start-button" type="submit">Start</button>
+
+    </div>
+  </div>
+
+<!--QUESTIONS-->
+      <div class="container w-50 vh-50 text-sm-center border border-dark mt-5 rounded">
+        <div class="mb-5">
+          <h5 class="m-5">What does CSS stand for?</h5>
+          <button class="btn btn-primary m-2 d-block"><b class="text-dark">A</b> Computer Style Sheets</button>
+          <button class="btn btn-primary m-2 d-block"><b class="text-dark">B</b> Creative Style Sheets</button>
+          <button class="btn btn-primary m-2 d-block"><b class="text-dark">C</b> Cascading Style Sheets</button>
+          <button class="btn btn-primary m-2 d-block"><b class="text-dark">D</b> Colorful Style Sheets</button>
+        </div>
+      </div>
+
+
+
+      <script src="assets/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  </body>
 </html>
