--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
 
 <!--NAV HEADER (High Scores and Timer)-->
     <nav class="navbar navbar-dark bg-dark text-light">
-        <div class="container">
+        <div class="container" id="questons-container">
           <p class="navbar-brand" id="high-scores">View High Scores</p>
           <p class="navbar-brand">Timer: <span id="timer">60</span></p>
         </div>
       </nav>
 
 <!--INTRO-->
-<div class="container w-50 vh-50 text-sm-center border border-dark mt-5 rounded">
-    <div class="mb-5">
+<div class=" container w-50 vh-50 text-sm-center border border-dark mt-5 rounded">
+    <div class="mainBox mb-5">
       <h5 class="m-5">CODING QUIZ CHALLENGE</h5>
-      <p class="container">Try to answer the following code-related questions within the time limit. Keep in mins that incorrect answers will penalize your score/time by 10 seconds.</p>
-      <button class="btn btn-primary m-5" id="start-button" type="submit">Start</button>
-
+      <p class="container " id="questions-here">Try to answer the following code-related questions within the time limit. Keep in mins that incorrect answers will penalize your score/time by 10 seconds.</p>
+      <h4 id="new-question"></h4>
     </div>
   </div>
-
-<!--QUESTIONS-->
+<div class="text-center">
+  <button class="btn btn-primary m-5" id="start-button" type="submit">Start</button>
+  <button class="btn btn-primary m-5 noShow" id="next-button" type="submit">Next</button>
+</div>>
+<!-- QUESTIONS
       <div class="container w-50 vh-50 text-sm-center border border-dark mt-5 rounded">
         <div class="mb-5">
           <h5 class="m-5">What does CSS stand for?</h5>
@@ -39,11 +41,12 @@
           <button class="btn btn-primary m-2 d-block"><b class="text-dark">C</b> Cascading Style Sheets</button>
           <button class="btn btn-primary m-2 d-block"><b class="text-dark">D</b> Colorful Style Sheets</button>
         </div>
-      </div>
+      </div> -->
 
 
 
       <script src="assets/js/main.js"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   </body>
