--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
 <!--NAV HEADER (High Scores and Timer)-->
-    <nav class="navbar navbar-dark bg-dark text-light">
+    <nav class="navbar navbar-darl bg-dark text-light">
         <div class="container" id="questons-container">
           <a class="navbar-brand" id="high-scores" href="#">View High Scores</a>       
           <p class="navbar-brand">Timer: <span id="timer">60</span></p>
@@ -21,11 +21,10 @@
       </nav>
 
 <!--INTRO-->
-<div class=" container w-75 vh-50 text-sm-center border border-dark mt-5 rounded">
+<div class=" container w-75 vh-50 text-sm-center border border-success mt-5 rounded">
     <div class="mainBox mb-5">
-      <h5 class="m-5" id="intro-header">CODING QUIZ CHALLENGE</h5>
-      <p class="container " id="questions-here">Try to answer the following code-related questions within the time limit. Keep in mins that incorrect answers will penalize your score/time by 10 seconds.</p>
-      <h4 id="new-question"></h4>
+      <h1 class="m-5 text-info" id="intro-header">CODING QUIZ CHALLENGE</h1>
+      <h4 class="container mb-5 text-success" id="questions-here">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds.</h4>
     </div>
   </div>
 <div class="text-center">
@@ -35,9 +34,12 @@
   <div class="tex-sm-center mt-3">
     <h4 id="result"></h4>
   </div>
-
-  <button class="btn btn-primary m-5 noShow" id="next-button" type="submit">Next</button>
 </div>
+
+
+
+
+
 
 <!-- QUESTIONS
       <div class="container w-50 vh-50 text-sm-center border border-dark mt-5 rounded">
